--- a/style.css
+++ b/style.css
@@ -162,4 +162,17 @@ h3{
         width: 100%;
         display: flex;
     }
+    .contactHead{
+        width: 100%;
+        height: 90px;
+        text-align: center;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+    .contactbox{
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        height: 1300px;
+    }
   }
